app/static/styles/logo_and_links.css
.identity_tripcode {
  cursor: pointer;
}

.tripcode_holder a {
  color: #aaa;
}

.logo .identity_tripcode {
  max-height: 5px;
  height: 4px;
  width: 40px;
  position: relative;
  top: -8px;
  left: 0px;
  overflow: hidden;
}
.navbar {
  padding-top: 10px;
  background-color: #fafafa;
  border: 0px;
}

#anons {
  position: absolute;
  top: 25px;
  right: 0px;
  opacity: 0.4;
  zoom: 0.8;

  @media only screen and (min-width: 767px) {
    right: 36px;
  }
}

body:not(:-moz-handler-blocked) #anons { 
  top: 20px;
}

#anons:hover {
  opacity: 0.8; 
}
#page_content { 
  margin-top: 70px; 
}

#logobar.navbar {
  position: fixed;
  top: 0;
  z-index: 1000;

  @media @device {
    right: 15px;
    left: 15px;
  }
}

#logobar .navbar_helper {
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 0;

  padding-right: 0px;

  @media only screen and (min-width: 767px) {
    padding-right: 30px;
  }

  .logo {
    position: relative;

      img {
        z-index: 2000;
      }
  }
}


.boardlink a {
  text-align: center;
  cursor: pointer;
  display: block;
  min-width: 50px;
  padding-top: 5px;
  padding-bottom: 5px;

  &:hover {
    background-color: #ddd;
  }
}


.hue {
  -webkit-animation: hue 10s infinite;
  color: #ff0;
}

@-webkit-keyframes hue {
  0%, 100%  { -webkit-filter: hue-rotate(0deg); }
  50% { -webkit-filter: hue-rotate(360deg); }
}

.anonicator {
  padding: 5px;
}

body .sidr {
  padding: 0px;
  padding-top: 15px;
  margin-top: 80px;
  width: 100%;

}

body .sidr.right {
  padding: 15px;
}

